# pico_synth_ex

./: .gitignore  CMakeLists.txt  README.md  pico_synth.c  pico_synth_ex.c
build_windows/: build_windows.bat
