cmake_minimum_required(VERSION 3.13)
include(pico_sdk_import.cmake)
project(pico_synth_ex)
pico_sdk_init()
add_executable(pico_synth_ex pico_synth_ex.c)
pico_set_binary_type(pico_synth_ex copy_to_ram)
pico_enable_stdio_usb(pico_synth_ex 0)
pico_enable_stdio_uart(pico_synth_ex 1)
pico_add_extra_outputs(pico_synth_ex)
target_link_libraries(pico_synth_ex pico_stdlib
  hardware_irq hardware_pwm)
